[gd_scene load_steps=47 format=2]

[ext_resource path="res://Font/DynamicFonts/Fuente26.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/prejuego.gd" type="Script" id=2]
[ext_resource path="res://graphics/botones/8x8i.png" type="Texture" id=3]
[ext_resource path="res://Font/DynamicFonts/Fuente30.tres" type="DynamicFont" id=4]
[ext_resource path="res://Font/DynamicFonts/Fuente50.tres" type="DynamicFont" id=5]
[ext_resource path="res://graphics/botones/BRvs.png" type="Texture" id=6]
[ext_resource path="res://graphics/botones/BRvi.png" type="Texture" id=7]
[ext_resource path="res://graphics/botones/BRv.png" type="Texture" id=8]
[ext_resource path="res://graphics/botones/return.png" type="Texture" id=9]
[ext_resource path="res://graphics/botones/returns.png" type="Texture" id=10]
[ext_resource path="res://graphics/botones/returni.png" type="Texture" id=11]
[ext_resource path="res://Font/DynamicFonts/Fuente20.tres" type="DynamicFont" id=12]
[ext_resource path="res://graphics/botones/sig_s.png" type="Texture" id=13]
[ext_resource path="res://graphics/selectable/tank1.png" type="Texture" id=14]
[ext_resource path="res://graphics/botones/sig_i.png" type="Texture" id=15]
[ext_resource path="res://graphics/botones/sig.png" type="Texture" id=16]
[ext_resource path="res://graphics/botones/ant.png" type="Texture" id=17]
[ext_resource path="res://graphics/botones/ant_s.png" type="Texture" id=18]
[ext_resource path="res://graphics/botones/ant_i.png" type="Texture" id=19]
[ext_resource path="res://graphics/ammo/Seleccion0.png" type="Texture" id=20]
[ext_resource path="res://graphics/fire/5.png" type="Texture" id=21]
[ext_resource path="res://shaders/blur.shader" type="Shader" id=22]
[ext_resource path="res://Sonidos/clic short.wav" type="AudioStream" id=23]
[ext_resource path="res://fondos/pregame.jpg" type="Texture" id=24]
[ext_resource path="res://Escenas/MainTheme.tscn" type="PackedScene" id=25]
[ext_resource path="res://graphics/Bordes/Borde.tres" type="StyleBox" id=27]
[ext_resource path="res://graphics/Bordes/Borde3.tres" type="StyleBox" id=28]
[ext_resource path="res://graphics/Bordes/Borde2.tres" type="StyleBox" id=29]
[ext_resource path="res://graphics/themaPopup.tres" type="Theme" id=30]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 22 )
shader_param/amount = 3.6

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="ShaderMaterial" id=13]
shader = ExtResource( 22 )
shader_param/amount = 3.6

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=17]

[node name="node" type="Node"]

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 24 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Principal" type="Control" parent="." groups=[
"NewGame",
]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="All" type="Control" parent="Principal"]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Equipo 1" type="Panel" parent="Principal/All"]
visible = false
anchor_left = 0.1
anchor_top = 0.15
anchor_right = 0.3
anchor_bottom = 0.4
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Principal/All/Equipo 1"]
anchor_left = 0.1
anchor_right = 0.9
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Principal/All/Equipo 1/VBoxContainer"]
margin_right = 184.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "Player 1:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScriptEquipo1" type="OptionButton" parent="Principal/All/Equipo 1/VBoxContainer"]
margin_top = 36.0
margin_right = 184.0
margin_bottom = 74.0
theme = ExtResource( 30 )
custom_styles/hover = ExtResource( 29 )
custom_styles/pressed = ExtResource( 28 )
custom_styles/normal = ExtResource( 27 )
custom_fonts/font = ExtResource( 12 )
text = "Seleccionar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Principal/All/Equipo 1"]
anchor_left = 0.2
anchor_top = 0.5
anchor_right = 0.8
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TanqueEquipo1" type="TextureButton" parent="Principal/All/Equipo 1/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 14 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Equipo 2" type="Panel" parent="Principal/All"]
visible = false
anchor_left = 0.4
anchor_top = 0.15
anchor_right = 0.6
anchor_bottom = 0.4
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Principal/All/Equipo 2"]
anchor_left = 0.1
anchor_right = 0.9
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Principal/All/Equipo 2/VBoxContainer"]
margin_right = 184.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "Player 2:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScriptEquipo2" type="OptionButton" parent="Principal/All/Equipo 2/VBoxContainer"]
margin_top = 36.0
margin_right = 184.0
margin_bottom = 74.0
theme = ExtResource( 30 )
custom_styles/hover = ExtResource( 29 )
custom_styles/pressed = ExtResource( 28 )
custom_styles/normal = ExtResource( 27 )
custom_fonts/font = ExtResource( 12 )
text = "Seleccionar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Principal/All/Equipo 2"]
anchor_left = 0.2
anchor_top = 0.5
anchor_right = 0.8
anchor_bottom = 1.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TanqueEquipo2" type="TextureButton" parent="Principal/All/Equipo 2/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 14 )
expand = true

[node name="Equipo 3" type="Panel" parent="Principal/All"]
visible = false
anchor_left = 0.1
anchor_top = 0.45
anchor_right = 0.3
anchor_bottom = 0.7
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Principal/All/Equipo 3"]
anchor_left = 0.1
anchor_right = 0.9
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Principal/All/Equipo 3/VBoxContainer"]
margin_right = 184.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "Player 3:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScriptEquipo3" type="OptionButton" parent="Principal/All/Equipo 3/VBoxContainer"]
margin_top = 36.0
margin_right = 184.0
margin_bottom = 74.0
theme = ExtResource( 30 )
custom_styles/hover = ExtResource( 29 )
custom_styles/pressed = ExtResource( 28 )
custom_styles/normal = ExtResource( 27 )
custom_fonts/font = ExtResource( 12 )
text = "Seleccionar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Principal/All/Equipo 3"]
anchor_left = 0.2
anchor_top = 0.5
anchor_right = 0.8
anchor_bottom = 1.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TanqueEquipo3" type="TextureButton" parent="Principal/All/Equipo 3/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 14 )
expand = true

[node name="Equipo 4" type="Panel" parent="Principal/All"]
visible = false
anchor_left = 0.4
anchor_top = 0.45
anchor_right = 0.6
anchor_bottom = 0.7
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Principal/All/Equipo 4"]
anchor_left = 0.1
anchor_right = 0.9
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Principal/All/Equipo 4/VBoxContainer"]
margin_right = 184.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "Player 4:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScriptEquipo4" type="OptionButton" parent="Principal/All/Equipo 4/VBoxContainer"]
margin_top = 36.0
margin_right = 184.0
margin_bottom = 74.0
theme = ExtResource( 30 )
custom_styles/hover = ExtResource( 29 )
custom_styles/pressed = ExtResource( 28 )
custom_styles/normal = ExtResource( 27 )
custom_fonts/font = ExtResource( 12 )
text = "Seleccionar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Principal/All/Equipo 4"]
anchor_left = 0.2
anchor_top = 0.5
anchor_right = 0.8
anchor_bottom = 1.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TanqueEquipo4" type="TextureButton" parent="Principal/All/Equipo 4/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 14 )
expand = true

[node name="ContainerDisp" type="Control" parent="Principal/All"]
anchor_left = 0.8
anchor_top = 0.15
anchor_right = 1.0
anchor_bottom = 0.3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Num Disp" type="TextureButton" parent="Principal/All/ContainerDisp"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Principal/All/ContainerDisp/Num Disp"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "Modificar
munición"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContainerHurt" type="Control" parent="Principal/All"]
anchor_left = 0.8
anchor_top = 0.35
anchor_right = 1.0
anchor_bottom = 0.5

[node name="Daño Disp" type="TextureButton" parent="Principal/All/ContainerHurt"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
expand = true

[node name="Label" type="Label" parent="Principal/All/ContainerHurt/Daño Disp"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "Modificar
daño"
align = 1
valign = 1

[node name="Panel" type="Panel" parent="Principal/All"]
anchor_top = 0.8
anchor_right = 0.3
anchor_bottom = 0.9
margin_right = 40.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Principal/All/Panel"]
anchor_right = 0.333
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -806.858, 0 )

[node name="Menor" type="TextureButton" parent="Principal/All/Panel/Control"]
anchor_right = 0.8
anchor_bottom = 1.0
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 19 )
expand = true

[node name="Control2" type="Control" parent="Principal/All/Panel"]
anchor_left = 0.333
anchor_right = 0.666
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -806.858, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mapa" type="NinePatchRect" parent="Principal/All/Panel/Control2"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control3" type="Control" parent="Principal/All/Panel"]
anchor_left = 0.666
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -806.858, 0 )

[node name="Mayor" type="TextureButton" parent="Principal/All/Panel/Control3"]
anchor_left = 0.4
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -12.0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 15 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="Principal/All"]
anchor_left = 0.7
anchor_top = 0.8
anchor_right = 0.95
anchor_bottom = 0.9
margin_right = 40.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Aceptar" type="TextureButton" parent="Principal/All/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Principal/All/Panel2/Aceptar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 5 )
text = "Jugar"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumeroDeEquipos" type="HBoxContainer" parent="Principal/All"]
anchor_left = 0.1
anchor_right = 0.7
anchor_bottom = 0.1
custom_constants/separation = 22
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Principal/All/NumeroDeEquipos"]
margin_top = 16.0
margin_right = 258.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "Número de jugadores:"

[node name="NEquipos" type="OptionButton" parent="Principal/All/NumeroDeEquipos"]
margin_left = 280.0
margin_right = 680.0
margin_bottom = 64.0
rect_min_size = Vector2( 400, 0 )
theme = ExtResource( 30 )
custom_styles/hover = ExtResource( 29 )
custom_styles/pressed = ExtResource( 28 )
custom_styles/normal = ExtResource( 27 )
custom_fonts/font = ExtResource( 1 )
text = "  Seleccionar"
expand_icon = true

[node name="Hurt" type="Control" parent="Principal"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Principal/Hurt"]
material = SubResource( 8 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -561.0
margin_top = -265.0
margin_right = 561.0
margin_bottom = 265.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Principal/Hurt/Panel"]
anchor_left = 0.07
anchor_top = 0.07
anchor_right = 0.074
anchor_bottom = 0.07
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 4 )
text = "Modificar daños:"

[node name="Panel" type="Panel" parent="Principal/Hurt/Panel"]
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.7
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelM" type="Panel" parent="Principal/Hurt/Panel/Panel"]
anchor_left = 0.015
anchor_right = 0.315
anchor_bottom = 1.0
margin_right = 12.0
custom_styles/panel = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Principal/Hurt/Panel/Panel/PanelM"]
anchor_right = 1.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 12 )
text = "Daño de minas:"
align = 1

[node name="DanoMin" type="TextureButton" parent="Principal/Hurt/Panel/Panel/PanelM"]
pause_mode = 2
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 1.0
texture_normal = ExtResource( 21 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="num" type="Label" parent="Principal/Hurt/Panel/Panel/PanelM/DanoMin"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -37.0
custom_fonts/font = ExtResource( 4 )
text = "5%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelDP" type="Panel" parent="Principal/Hurt/Panel/Panel"]
anchor_left = 0.345
anchor_right = 0.645
anchor_bottom = 1.0
margin_left = -6.0
margin_right = 6.0
custom_styles/panel = SubResource( 11 )

[node name="Label" type="Label" parent="Principal/Hurt/Panel/Panel/PanelDP"]
anchor_right = 1.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 12 )
text = "Daño de disparos parabolicos:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DañoDispP" type="TextureButton" parent="Principal/Hurt/Panel/Panel/PanelDP"]
pause_mode = 2
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 1.0
texture_normal = ExtResource( 21 )
expand = true

[node name="num" type="Label" parent="Principal/Hurt/Panel/Panel/PanelDP/DañoDispP"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -37.0
custom_fonts/font = ExtResource( 4 )
text = "5%"

[node name="PanelDL" type="Panel" parent="Principal/Hurt/Panel/Panel"]
anchor_left = 0.675
anchor_right = 0.985
anchor_bottom = 1.0
margin_left = -12.0
custom_styles/panel = SubResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Principal/Hurt/Panel/Panel/PanelDL"]
anchor_right = 1.0
margin_right = 6.10352e-05
margin_bottom = 28.0
custom_fonts/font = ExtResource( 12 )
text = "Daño de disparos lineales:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DañoDispL" type="TextureButton" parent="Principal/Hurt/Panel/Panel/PanelDL"]
pause_mode = 2
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 1.0
texture_normal = ExtResource( 21 )
expand = true

[node name="num" type="Label" parent="Principal/Hurt/Panel/Panel/PanelDL/DañoDispL"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -37.0
custom_fonts/font = ExtResource( 4 )
text = "5%"

[node name="Control" type="Control" parent="Principal/Hurt/Panel"]
anchor_left = 0.4
anchor_top = 0.9
anchor_right = 0.6
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -40.0
margin_right = 20.0

[node name="AceptarHurt" type="TextureButton" parent="Principal/Hurt/Panel/Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Principal/Hurt/Panel/Control/AceptarHurt"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
text = "Aceptar"
align = 1
valign = 1

[node name="EfectoHurt" type="Tween" parent="Principal/Hurt"]

[node name="Loot" type="Control" parent="Principal"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Principal/Loot"]
material = SubResource( 13 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -561.0
margin_top = -265.0
margin_right = 561.0
margin_bottom = 265.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Principal/Loot/Panel"]
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.7
margin_left = 7.62939e-06
custom_styles/panel = SubResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelM" type="Panel" parent="Principal/Loot/Panel/Panel"]
anchor_left = 0.015
anchor_right = 0.315
anchor_bottom = 1.0
margin_right = 12.0
custom_styles/panel = SubResource( 15 )

[node name="MunMin" type="TextureButton" parent="Principal/Loot/Panel/Panel/PanelM"]
pause_mode = 2
anchor_left = 0.1
anchor_top = 0.25
anchor_right = 0.9
anchor_bottom = 1.0
texture_normal = ExtResource( 20 )
expand = true

[node name="Label" type="Label" parent="Principal/Loot/Panel/Panel/PanelM"]
anchor_right = 1.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 12 )
text = "Munición minas:"
align = 1

[node name="PanelDP" type="Panel" parent="Principal/Loot/Panel/Panel"]
anchor_left = 0.345
anchor_right = 0.645
anchor_bottom = 1.0
margin_left = -6.0
margin_right = 6.0
custom_styles/panel = SubResource( 16 )

[node name="Label" type="Label" parent="Principal/Loot/Panel/Panel/PanelDP"]
anchor_right = 1.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 12 )
text = "Munición disparos
parabolicos:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MunDispP" type="TextureButton" parent="Principal/Loot/Panel/Panel/PanelDP"]
pause_mode = 2
anchor_left = 0.1
anchor_top = 0.25
anchor_right = 0.9
anchor_bottom = 1.0
texture_normal = ExtResource( 20 )
expand = true

[node name="PanelDL" type="Panel" parent="Principal/Loot/Panel/Panel"]
anchor_left = 0.675
anchor_right = 0.985
anchor_bottom = 1.0
margin_left = -12.0
custom_styles/panel = SubResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Principal/Loot/Panel/Panel/PanelDL"]
anchor_right = 1.0
margin_right = 6.10352e-05
margin_bottom = 28.0
custom_fonts/font = ExtResource( 12 )
text = "Municion disparos
lineales:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MunDispL" type="TextureButton" parent="Principal/Loot/Panel/Panel/PanelDL"]
pause_mode = 2
anchor_left = 0.1
anchor_top = 0.25
anchor_right = 0.9
anchor_bottom = 1.0
texture_normal = ExtResource( 20 )
expand = true

[node name="Label" type="Label" parent="Principal/Loot/Panel"]
anchor_left = 0.07
anchor_top = 0.07
anchor_right = 0.074
anchor_bottom = 0.07
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 4 )
text = "Modificar munición:"

[node name="Control" type="Control" parent="Principal/Loot/Panel"]
anchor_left = 0.4
anchor_top = 0.9
anchor_right = 0.6
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -40.0
margin_right = 20.0

[node name="AceptarLoot" type="TextureButton" parent="Principal/Loot/Panel/Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
expand = true

[node name="Label" type="Label" parent="Principal/Loot/Panel/Control/AceptarLoot"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
text = "Aceptar"
align = 1
valign = 1

[node name="EfectoLoot" type="Tween" parent="Principal/Loot"]

[node name="Control2" type="Control" parent="Principal"]
anchor_right = 0.04
anchor_bottom = 0.035
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="regresa" type="TextureButton" parent="Principal/Control2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.5999
margin_top = -32.6
margin_right = 45.6
margin_bottom = 43.4
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cluc" type="AudioStreamPlayer" parent="Principal"]
pause_mode = 2
stream = ExtResource( 23 )
bus = "Click"

[node name="theme" parent="Principal" instance=ExtResource( 25 )]
[connection signal="item_selected" from="Principal/All/Equipo 1/VBoxContainer/ScriptEquipo1" to="Principal" method="_on_ScriptEquipo1_item_selected"]
[connection signal="pressed" from="Principal/All/Equipo 1/Panel/TanqueEquipo1" to="Principal" method="_on_TanqueEquipo1_pressed"]
[connection signal="item_selected" from="Principal/All/Equipo 2/VBoxContainer/ScriptEquipo2" to="Principal" method="_on_ScriptEquipo2_item_selected"]
[connection signal="pressed" from="Principal/All/Equipo 2/Panel/TanqueEquipo2" to="Principal" method="_on_TanqueEquipo2_pressed"]
[connection signal="item_selected" from="Principal/All/Equipo 3/VBoxContainer/ScriptEquipo3" to="Principal" method="_on_ScriptEquipo3_item_selected"]
[connection signal="pressed" from="Principal/All/Equipo 3/Panel/TanqueEquipo3" to="Principal" method="_on_TanqueEquipo3_pressed"]
[connection signal="item_selected" from="Principal/All/Equipo 4/VBoxContainer/ScriptEquipo4" to="Principal" method="_on_ScriptEquipo4_item_selected"]
[connection signal="pressed" from="Principal/All/Equipo 4/Panel/TanqueEquipo4" to="Principal" method="_on_TanqueEquipo4_pressed"]
[connection signal="pressed" from="Principal/All/ContainerDisp/Num Disp" to="Principal" method="_on_Num_Disp_pressed"]
[connection signal="pressed" from="Principal/All/ContainerHurt/Daño Disp" to="Principal" method="_on_Dao_Disp_pressed"]
[connection signal="pressed" from="Principal/All/Panel/Control/Menor" to="Principal" method="_on_Menor_pressed"]
[connection signal="pressed" from="Principal/All/Panel/Control3/Mayor" to="Principal" method="_on_Mayor_pressed"]
[connection signal="pressed" from="Principal/All/Panel2/Aceptar" to="Principal" method="_on_Aceptar_pressed"]
[connection signal="item_selected" from="Principal/All/NumeroDeEquipos/NEquipos" to="Principal" method="_on_item_pressed"]
[connection signal="pressed" from="Principal/Hurt/Panel/Panel/PanelM/DanoMin" to="Principal" method="_on_DaoMin_pressed"]
[connection signal="pressed" from="Principal/Hurt/Panel/Panel/PanelDP/DañoDispP" to="Principal" method="_on_DaoDispP_pressed"]
[connection signal="pressed" from="Principal/Hurt/Panel/Panel/PanelDL/DañoDispL" to="Principal" method="_on_DaoDispL_pressed"]
[connection signal="pressed" from="Principal/Hurt/Panel/Control/AceptarHurt" to="Principal" method="_on_AceptarHurt_pressed"]
[connection signal="pressed" from="Principal/Loot/Panel/Panel/PanelM/MunMin" to="Principal" method="_on_MunMin_pressed"]
[connection signal="pressed" from="Principal/Loot/Panel/Panel/PanelDP/MunDispP" to="Principal" method="_on_MunDispP_pressed"]
[connection signal="pressed" from="Principal/Loot/Panel/Panel/PanelDL/MunDispL" to="Principal" method="_on_MunDispL_pressed"]
[connection signal="pressed" from="Principal/Loot/Panel/Control/AceptarLoot" to="Principal" method="_on_AceptarLoot_pressed"]
[connection signal="pressed" from="Principal/Control2/regresa" to="Principal" method="_on_regresa_pressed"]
